refactor: file path fix

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Análisis Léxico</title>
-    <link rel="stylesheet" href="/views/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
     <div class="container">
@@ -12,12 +12,12 @@
         <div class="card card-padding">
             <div class="file-actions">
                 <label for="file-input" class="file-label">
-                    <img src="/assets/upload_icon.svg" alt="Upload Icon" class="upload-icon" />
+                    <img src="/static/images/upload_icon.svg" alt="Upload Icon" class="upload-icon" />
                     Seleccionar archivo
                 </label>
                 <input type="file" id="file-input" class="sr-only" />
                 <button id="remove-file" class="remove-button" style="display: none;">
-                    <img src="/assets/close_icon.svg" alt="Close Icon" class="close-icon" />
+                    <img src="/static/images/close_icon.svg" alt="Close Icon" class="close-icon" />
                 </button>
             </div>
             <div class="file-name" id="file-name">Sin archivos seleccionados</div>
@@ -55,6 +55,6 @@
         </div>
     </div>
 
-    <script src="/views/script.js"></script>
+    <script src="/static/js/script.js"></script>
 </body>
 </html>
